# CMake-Sample

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cxx
docs/: CMakeLists.txt  mainpage.md
include/maths/: times.hxx
include/numeric/: accumulate.hxx
include/phrases/: bye.hxx  greet.hxx
include/utils/: bye_world.hxx  print.hxx  repeat.hxx
src/: CMakeLists.txt
src/maths/: CMakeLists.txt  times.cxx
src/numeric/: CMakeLists.txt  accumulate.cxx
src/phrases/: CMakeLists.txt  bye.cxx  greet.cxx
src/utils/: CMakeLists.txt  bye_world.cxx  print.cxx  repeat.cxx
tests/: CMakeLists.txt  test.cxx
tests/numeric/: CMakeLists.txt  numericlib.test.cxx
tests/phrases/: CMakeLists.txt  phraseslib.test.cxx
tests/utils/: CMakeLists.txt  utilslib.test.cxx
